--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "dotenv": "^16.0.2",
     "firebase": "^9.9.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
